; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMClearSpecialBit.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMClearSpecialBit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_MSEC_U32_REG_ADDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PRCMClearSpecialBit(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i8 %0, i8* %2, align 1
  %4 = load i32, i32* @RTC_MSEC_U32_REG_ADDR, align 4
  %5 = call i32 @MAP_PRCMHIBRegRead(i32 %4)
  %6 = load i8, i8* %2, align 1
  %7 = zext i8 %6 to i32
  %8 = shl i32 1, %7
  %9 = xor i32 %8, -1
  %10 = and i32 %5, %9
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @RTC_MSEC_U32_REG_ADDR, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @PRCMHIBRegWrite(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @MAP_PRCMHIBRegRead(i32) #1

declare dso_local i32 @PRCMHIBRegWrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
